# BibleVerse

./: CMakeLists.txt  LICENSE  README.md  main.cpp
src/: InputParser.cpp  InputParser.h  TextFetcher.cpp  TextFetcher.h
